--- a/PortfolioWebsite/src/app/app.component.html
+++ b/PortfolioWebsite/src/app/app.component.html
@@ -1,4 +1,5 @@
+<div id="body">
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<app-index></app-index>
 <app-footer></app-footer>
+</div>
