--- a/PortfolioWebsite/src/app/footer/footer.component.html
+++ b/PortfolioWebsite/src/app/footer/footer.component.html
@@ -6,11 +6,11 @@
       <!-- Section: Social media -->
       <section class="mb-4">
         <!-- Linkedin -->
-        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.youtube.com/watch?v=jS4aFq5-91M" target="_blank" role="button">
+        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.linkedin.com/in/alexander-wutscher-419722227/" target="_blank" role="button">
             <i class="bi bi-linkedin"></i>
         </a>
         <!-- Github -->
-        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button">
+        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/awutscher" role="button">
             <i class="bi bi-github"></i>
         </a>
         <p class="text-dark">Für Fragen stehe ich gerne zur Verfügung unter alexander.wutscher@chello.at</p>
