schreibfehler / display issue on mobile

--- a/PortfolioWebsite/src/app/index/index.component.html
+++ b/PortfolioWebsite/src/app/index/index.component.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col d-flex flex-column p-0 justify-content-evenly">
           <div class="container-fluid d-flex flex-column align-items-center text-wrap w-75 gap-2">
-            <p class="text-monospace fs-3 fw-bold text-center">"Hallo ! Ich bin Alex"</p>
+            <p class="text-monospace fs-3 fw-bold text-center">"Hallo! Ich bin Alex"</p>
             <p class="text-center fs-6">Mit Front-End Development habe ich den Weg gefunden, den ich nach 6 Jahren in der Gastronomie und 3 Jahren im öffentlichen Verkehr gehen will.
             </p>
             <h5 class="text-monospace text-center">Was ist mein Ziel ?</h5>
@@ -33,11 +33,11 @@
 <!-- Languages -->
 <div class="container">
     <div class="p-3 d-flex justify-content-center">
-        <h2 class="p-3 bg-dark text-white">Welche Sprachen spreche Ich?</h2>
+        <h2 class="p-3 bg-dark text-white">Welche Sprachen spreche ich?</h2>
     </div>
     <div class="d-flex justify-content-around mb-4 flex-wrap">
     <div *ngFor="let language of languages">
-      <div class="card mt-2 mb-2" style="width: 18rem;">
+      <div class="card mt-2 mb-2" style="width: 14rem;">
         <img src="{{language.image}}" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title text-center">{{language.name}}</h5>
