--- a/PortfolioWebsite/src/app/app.component.html
+++ b/PortfolioWebsite/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div id="body">
+<div #body (change)="changeTheme()">
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
