--- a/PortfolioWebsite/src/app/footer/footer.component.html
+++ b/PortfolioWebsite/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 
 
-    <footer class="text-center text-white" style="background-color: #f1f1f1;">
+    <footer class="text-center">
     <!-- Grid container -->
     <div class="container pt-4">
       <!-- Section: Social media -->
@@ -10,17 +10,17 @@
             <i class="bi bi-linkedin"></i>
         </a>
         <!-- Github -->
-        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/awutscher" role="button">
+        <a class="btn btn-link btn-floating btn-lg m-1" href="https://github.com/awutscher" role="button">
             <i class="bi bi-github"></i>
         </a>
-        <p class="text-dark">Für Fragen stehe ich gerne zur Verfügung unter alexander.wutscher@chello.at</p>
+        <p>Für Fragen stehe ich gerne zur Verfügung unter alexander.wutscher@chello.at</p>
       </section>
       <!-- Section: Social media -->
     </div>
     <!-- Grid container -->
   
     <!-- Copyright -->
-    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 Copyright: Alexander Wutscher
     </div>
     <!-- Copyright -->
