--- a/PortfolioWebsite/src/app/navbar/navbar.component.html
+++ b/PortfolioWebsite/src/app/navbar/navbar.component.html
@@ -12,16 +12,16 @@
           <li class="nav-item">
             <a class="nav-link active" routerLink="projects">Projekte</a>
           </li>
-          <li>
-            <div class="d-flex">
-              <div>
+          <li class="nav-item dark-light-theme">
+            <div class="d-inline-flex justify-content-center align-items-center">
+              <div class="p-2">
                 <a class="bi bi-sun-fill"></a>
               </div>
-              <div class="form-check form-switch ms-auto">
+              <div class="form-check form-switch">
                   <label class="form-check-label" for="lightSwitch"></label>
                   <input class="form-check-input" type="checkbox" id="lightSwitch" (click)="toggleTheme()">
               </div>
-              <div>
+              <div class="px-1">
                 <a class="bi bi-moon-fill"></a>
               </div>
             </div>
