css problem fixed

--- a/PortfolioWebsite/src/app/app.component.html
+++ b/PortfolioWebsite/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div #body (change)="changeTheme()">
+<div #body (change)="changeTheme()" class="light">
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
