--- a/PortfolioWebsite/src/app/app.component.css
+++ b/PortfolioWebsite/src/app/app.component.css
@@ -10,16 +10,23 @@
     background-color: white;
     color: black;
 }
-/* 
+
 .light nav {
-    background-color: rgba(0, 0, 0, 0.81);
+    background-color: rgba(0, 0, 0, 0.2); 
 }
 
 .light nav .navbar-logo {
     background-color: rgb(0, 0, 0);
     color: white;
-} */
+}
 
+.light footer{
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.light .bg-gray{
+    background-color: rgba(0, 0, 0, 0.2);
+}
 
 /* Dark Theme */
 
