--- a/PortfolioWebsite/src/app/footer/footer.component.html
+++ b/PortfolioWebsite/src/app/footer/footer.component.html
@@ -20,7 +20,7 @@
     <!-- Grid container -->
   
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="text-center p-3">
       © 2022 Copyright: Alexander Wutscher
     </div>
     <!-- Copyright -->
