--- a/PortfolioWebsite/src/app/app.component.css
+++ b/PortfolioWebsite/src/app/app.component.css
@@ -9,6 +9,7 @@
 .light{
     background-color: white;
     color: black;
+    transition: all 0.5s;
 }
 
 .light nav {
@@ -20,6 +21,15 @@
     color: white;
 }
 
+.light .heroTextImg{
+    border: 4px solid black;
+}
+
+.light .header{
+    background-color: rgba(33,37,41,255);
+    color: white;
+}
+
 .light footer{
     background-color: rgba(0, 0, 0, 0.2);
 }
@@ -28,9 +38,54 @@
     background-color: rgba(0, 0, 0, 0.2);
 }
 
+.light .bi{
+    color: black;
+}
+
 /* Dark Theme */
 
 .dark{
     background-color: rgb(33, 33, 33);
-    color: white; /* noch wechseln bei index text auf karten */
+    color: white;
+    transition: all 0.5s;
+}
+
+.dark nav {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.dark .nav-link{
+    color: white;
+}
+
+.dark nav .navbar-logo {
+    background-color: white;
+    color: black;
+}
+
+.dark .heroTextImg{
+    border: 4px solid rgb(255, 255, 255);
+}
+
+.dark .bg-gray{
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
+}
+
+.dark .header{
+    background-color: rgba(204,204,204,255);
+    color: black;
+}
+
+.dark .card {
+    color: black;
+}
+
+.dark footer {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
+}
+
+.dark .bi{
+    color: white;
 }
