--- a/PortfolioWebsite/src/app/navbar/navbar.component.html
+++ b/PortfolioWebsite/src/app/navbar/navbar.component.html
@@ -7,30 +7,30 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="">Home</a>
+            <a class="nav-link fs-5" aria-current="page" routerLink="">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" routerLink="projects">Projekte</a>
-          </li>
-          <li class="nav-item dark-light-theme">
-            <div class="d-inline-flex justify-content-center align-items-center">
-              <div class="p-2">
-                <a class="bi bi-sun-fill"></a>
-              </div>
-              <div class="form-check form-switch">
-                  <label class="form-check-label" for="lightSwitch"></label>
-                  <input class="form-check-input" type="checkbox" id="lightSwitch" (click)="toggleTheme()">
-              </div>
-              <div class="px-1">
-                <a class="bi bi-moon-fill"></a>
-              </div>
-            </div>
+            <a class="nav-link fs-5" routerLink="projects">Projekte</a>
           </li>
           <!-- to be implemented -->
           <!-- <li class="nav-item">
             <a class="nav-link active" href="#">Contact</a>
           </li> -->
         </ul>
+        <div class="nav-item">
+          <div class="d-inline-flex justify-content-center align-items-center">
+            <div class="p-2">
+              <a class="bi bi-sun-fill"></a>
+            </div>
+            <div class="form-check form-switch">
+                <label class="form-check-label" for="lightSwitch"></label>
+                <input class="form-check-input" type="checkbox" id="lightSwitch" (click)="toggleTheme()">
+            </div>
+            <div class="px-1">
+              <a class="bi bi-moon-fill"></a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 </nav>
