--- a/PortfolioWebsite/src/app/projects/projects.component.html
+++ b/PortfolioWebsite/src/app/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div>
-    <div class="p-3 d-flex justify-content-center">
-        <h2 class="p-3 bg-dark text-white">Meine Projekte</h2>
+    <div class="p-3 d-flex justify-content-center headerDiv">
+        <h2 class="p-3 header">Meine Projekte</h2>
     </div>
     <div *ngFor="let project of projects; let even = even; let odd = odd" class="d-flex justify-content-around mt-3 mb-3" [ngClass]="{odd: odd, even: even}">
         <div class="d-flex  align-items-center flex-shrink-2 card-div" *ngIf="even; else Odd" @slideFromLeft>
