--- a/PortfolioWebsite/src/app/index/index.component.html
+++ b/PortfolioWebsite/src/app/index/index.component.html
@@ -33,7 +33,7 @@
 <!-- Languages -->
 <div class="container">
     <div class="p-3 d-flex justify-content-center headerDiv">
-        <h2 class="p-3 header">Welche Sprachen spreche ich?</h2>
+        <h2 class="p-3 header">Was habe ich bis jetzt gelernt?</h2>
     </div>
     <div class="d-flex justify-content-around mb-4 flex-wrap">
     <div *ngFor="let language of languages">
