--- a/PortfolioWebsite/src/app/projects/projects.component.css
+++ b/PortfolioWebsite/src/app/projects/projects.component.css
@@ -56,6 +56,10 @@ img{
         width: 90%;
         min-height: 200px;
     }
+    img{
+        width: 120px;
+        height: 120px;
+    }
     .even{
         margin-left: 10px;
         margin-right: 10px;
